Whitespace between "page add" and "search input" corrections

--- a/sources/stylesheets/_header.scss
+++ b/sources/stylesheets/_header.scss
@@ -215,4 +215,4 @@
    .front-page .header-container { padding-left: 40px;padding-right: 40px;}
  }
 
- .front-page .flex-item { white-space: nowrap;}  
+ .front-page .flex-item.right-block { white-space: nowrap;}  
