--- a/sources/stylesheets/_menus.scss
+++ b/sources/stylesheets/_menus.scss
@@ -272,7 +272,7 @@
       }
     }
 
-    .edit-btn {
+    .edit-btn.right-mainmenu {
       margin-right: 20px;
     }
   }
