--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -722,7 +722,7 @@ body.search-open {
     background: #000;
     color: #fff;
   }
-  .menu-front .edit-btn {
+  .menu-front .edit-btn.right-mainmenu {
     margin-right: 20px;
   }
 }
@@ -1503,7 +1503,7 @@ body.search-open {
     padding-right: 40px;
   }
 }
-.front-page .flex-item {
+.front-page .flex-item.right-block {
   white-space: nowrap;
 }
 
